--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             background-color: #f0f0f0;
             position: absolute;
             bottom: 0;
-            width: 30%;
+            width: 100%;
+            min-width: 300px; /* 设置最小宽度 */
+            white-space: nowrap; /* 防止换行 */
         }
         .b1 a {
             text-decoration: none;
