--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-color: #f0f0f0;
             text-align: center;
             padding-top: 20px; /* 添加一些顶部填充以避免内容贴近页面顶部 */
-            position: relative; /* 使body成为相对定位容器 */
+            position: relative; /* https://hongxing.one/hxvip?token=6c7632ba70c2cb59f9d82b8b34ef64fd */
         }
         h1 {
             margin: 5px 0;
